--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -58,7 +58,8 @@
 }
 
 body {
-  min-height: 100vh;
+  width: 100%;
+  height: 100%;
   color: var(--color-text);
   background: var(--color-background);
   transition: color 0.5s, background-color 0.5s;
@@ -69,6 +70,11 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+html{
+  width: 100%;
+  height: 100%;
 }
 
 ul, li {
